# gosuan

./: .gitignore  README.md  pyproject.toml
deploy/: DEPLOY_PROD.md  linux_prod_setup.sh
src/gosuan/: api.py  bazi.py  cli.py  daily_fortune.py  date_select.py  format_cn.py  meihua.py  models.py  openai_compat.py  wealth.py
tests/: test_api_smoke.py  test_bazi.py  test_cli.py  test_daily_fortune.py  test_date_select.py  test_date_select_filters.py  test_format_cn.py  test_meihua.py  test_openai_compat.py
